[package]
name = "streamdeck"
description = "Elgato Stream Deck driver and command line interface"
repository = "https://github.com/ryankurte/rust-streamdeck"
authors = ["ryan <ryan@kurte.nz>"]
version = "0.4.2"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "simplelog", "humantime" ]
default = [ "util" ]

[dependencies]
hidapi = "1.1.0"
log = "0.4.8"
image = "0.22.3"

structopt = { version = "0.3.5", optional = true }
simplelog = { version = "0.7.4", optional = true }
humantime = { version = "1.3.0", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "streamdeck-cli"
required-features = [ "util" ]
