[package]
name = "streamdeck"
description = "Elgato Stream Deck driver and command line interface"
repository = "https://github.com/ryankurte/rust-streamdeck"
authors = ["ryan <ryan@kurte.nz>"]
version = "0.7.0"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "structopt", "simplelog", "humantime" ]
default = [ "util" ]

[dependencies]
hidapi = "2.4"
log = "0.4.8"
image = "0.24.3"
imageproc = "0.23.0"
rusttype = "0.9.2"
thiserror = "1.0.30"

structopt = { version = "0.3.5", optional = true }
simplelog = { version = "0.12.0", optional = true }
humantime = { version = "2.1.0", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "streamdeck-cli"
required-features = [ "util" ]
