[package]
name = "streamdeck"
description = "Elgato Stream Deck driver and command line interface"
repository = "https://github.com/ryankurte/rust-streamdeck"
authors = ["ryan <ryan@kurte.nz>"]
version = "0.10.0"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "clap", "simplelog", "humantime" ]
default = [ "util" ]

[dependencies]
hidapi = "2.6"
log = "0.4.29"
image = "0.25.1"
imageproc = "0.26.2"
thiserror = "1.0.30"
ab_glyph = "0.2.25"

clap = {version = "4", optional = true, features = ["derive", "env"] }
simplelog = { version = "0.12.2", optional = true }
humantime = { version = "2.1.0", optional = true }
serde = { version = "1.0.104", optional = true, features = ["derive"] }

[[bin]]
path = "src/main.rs"
name = "streamdeck-cli"
required-features = [ "util" ]
